target_os = "android"
target_cpu = "arm64"       # or "arm", "x86", or "x64"; see below

# Create an official release build. Only official builds should be distributed
# to users, as non-official builds are intended for development and may not
# be configured appropriately for production.
is_debug = false
is_official_build = true

# Use the default production settings for field trials, instead of the testing
# defaults.
disable_fieldtrial_testing_config = true

# WebView's efficient native library loading mechanism is not compatible with
# component builds of Chromium.
is_component_build = false

# Disable Google-specific branding/features
is_chrome_branded = false
use_official_google_api_keys = false

# May disable some experimental (unstable) features. Hides WebView DevTools
# (a debugging tool most users won't need to access).
# android_channel = "stable"
android_channel = "dev"

system_webview_package_name = "com.google.android.webview.debug"

# https://chromium.googlesource.com/chromium/src/+/HEAD/android_webview/docs/quick-start.md#invalid-package-version-code-too-low
android_override_version_code = "2999999991"
